tests/baselines/reference/sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3(target=es2015).errors.txt
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(18,1): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(19,1): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(20,1): error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(21,1): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(22,1): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(23,1): error TS2488: Type '[string, string[]]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(25,1): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(26,1): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(27,1): error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(28,1): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(29,1): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(30,1): error TS2488: Type '[string, string[]]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(32,1): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(33,1): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(34,1): error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(35,1): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(35,26): error TS2488: Type '[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(35,26): error TS2488: Type 'string[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(36,1): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(36,26): error TS2488: Type '[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(36,26): error TS2488: Type 'string[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(37,1): error TS2488: Type '[string, [string, string]]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(37,26): error TS2488: Type '[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(37,26): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(40,1): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(41,1): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts(42,1): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.


==== sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues3.ts (27 errors) ====
    declare var console: {
        log(msg: any): void;
    }
    type Robot = [number, string, string];
    type MultiSkilledRobot = [string, string[]];
    
    var robotA: Robot = [1, "mower", "mowing"];
    var robotB: Robot = [2, "trimmer", "trimming"];
    var multiRobotA: MultiSkilledRobot = ["mower", ["mowing", ""]];
    var multiRobotB: MultiSkilledRobot = ["trimmer", ["trimming", "edging"]];
    
    let nameA: string, numberB: number, nameB: string, skillB: string;
    let robotAInfo: (number | string)[];
    
    let multiSkillB: string[], nameMB: string, primarySkillB: string, secondarySkillB: string;
    let multiRobotAInfo: (string | string[])[];
    
    [, nameA = "helloNoName"] = robotA;
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
    [, nameB = "helloNoName"] = getRobotB();
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
    [, nameB = "helloNoName"] = [2, "trimmer", "trimming"];
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
    [, multiSkillB = []] = multiRobotB;
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
    [, multiSkillB = []] = getMultiRobotB();
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
    [, multiSkillB = []] = ["roomba", ["vacuum", "mopping"]];
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[string, string[]]' must have a '[Symbol.iterator]()' method that returns an iterator.
    
    [numberB = -1] = robotB;
    ~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
    [numberB = -1] = getRobotB();
    ~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
    [numberB = -1] = [2, "trimmer", "trimming"];
    ~~~~~~~~~~~~~~
!!! error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
    [nameMB = "helloNoName"] = multiRobotB;
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
    [nameMB = "helloNoName"] = getMultiRobotB();
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
    [nameMB = "helloNoName"] = ["trimmer", ["trimming", "edging"]];
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[string, string[]]' must have a '[Symbol.iterator]()' method that returns an iterator.
    
    [numberB = -1, nameB = "helloNoName", skillB = "noSkill"] = robotB;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
    [numberB = -1, nameB = "helloNoName", skillB = "noSkill"] = getRobotB();
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
    [numberB = -1, nameB = "helloNoName", skillB = "noSkill"] = [2, "trimmer", "trimming"];
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
    [nameMB = "helloNoName", [primarySkillB = "noSkill", secondarySkillB = "noSkill"] = []] = multiRobotB;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[]' must have a '[Symbol.iterator]()' method that returns an iterator.
                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'string[]' must have a '[Symbol.iterator]()' method that returns an iterator.
    [nameMB = "helloNoName", [primarySkillB = "noSkill", secondarySkillB = "noSkill"] = []] = getMultiRobotB();
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[]' must have a '[Symbol.iterator]()' method that returns an iterator.
                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'string[]' must have a '[Symbol.iterator]()' method that returns an iterator.
    [nameMB = "helloNoName", [primarySkillB = "noSkill", secondarySkillB = "noSkill"] = []] =
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[string, [string, string]]' must have a '[Symbol.iterator]()' method that returns an iterator.
                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[]' must have a '[Symbol.iterator]()' method that returns an iterator.
                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
        ["trimmer", ["trimming", "edging"]];
    
    [numberB = -1, ...robotAInfo] = robotB;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
    [numberB = -1, ...robotAInfo] = getRobotB();
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
    [numberB = -1, ...robotAInfo] = <Robot>[2, "trimmer", "trimming"];
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
    
    if (nameA == nameB) {
        console.log(skillB);
    }
    
    function getRobotB() {
        return robotB;
    }
    
    function getMultiRobotB() {
        return multiRobotB;
    }